--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
             </div>
         </section>
 
+
+
+        <IMG src="https://wordpress-cms-ead-prod-assets.quero.space/uploads/2023/02/it-specialist-checking-code-at-computer-in-the-dark-office-at-night.jpg">
+            
+
         <!-- SEÇÃO: ENEM -->
         <section id="enem" class="content-section">
             <div class="grid-layout reverse">
