--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 
         <IMG src="https://wordpress-cms-ead-prod-assets.quero.space/uploads/2023/02/it-specialist-checking-code-at-computer-in-the-dark-office-at-night.jpg">
-            
+
 
         <!-- SEÇÃO: ENEM -->
         <section id="enem" class="content-section">
@@ -102,7 +102,7 @@
                     </ul>
                 </div>
                 <div class="image-block">
-                    <img src="https://images.unsplash.com" alt="Estudos e Notas">
+                    <img src="https://wordpress-cms-ead-prod-assets.quero.space/uploads/2023/02/it-specialist-checking-code-at-computer-in-the-dark-office-at-night.jpg alt="Estudos e Notas">
                 </div>
             </div>
         </section>
