--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p>A Tecnologia da Informação abrange o desenvolvimento de softwares, gestão de redes, segurança cibernética e inteligência artificial. É uma carreira dinâmica que exige aprendizado constante e oferece flexibilidade geográfica.</p>
                 </div>
                 <div class="image-block">
-                    <img src="https://images.unsplash.com" alt="Desenvolvimento de Software">
+                    <img src="https://wordpress-cms-gc-prod-assets.quero.space/uploads/2020/09/Desenvolvedor-2.jpg" alt="Desenvolvimento de Software">
                 </div>
             </div>
         </section>
