--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             
             <div class="salary-grid">
                 <div class="card">
-                    <img src="https://images.unsplash.com" alt="Junior Level">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRElK_BFoE5iJOvD9VsZhNuNYr49WA0D5Jaog&s"> alt="Junior Level">
                     <div class="card-info">
                         <h3>NÍVEL JÚNIOR</h3>
                         <p class="price">R$ 4.500,00</p>
