--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- HERO / BANNER PRINCIPAL -->
     <section class="hero-banner">
-        <div class="hero-overlay">
+        <div class="hero-overlay">https://thumbs.dreamstime.com/b/programador-s%C3%AAnior-trabalha-com-desenvolvimento-da-programa%C3%A7%C3%A3o-de-tecnologias-e-codifica%C3%A7%C3%A3o-trabalhando-software-em-v%C3%A1rios-154840122.jpg
             <h1>PROFISSÃO T.I.</h1>
             <p>O MOTOR DA EVOLUÇÃO DIGITAL MUNDIAL</p>
         </div>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://images.unsplash.com" alt="Senior Level">
+                    <img src="https://thumbs.dreamstime.com/b/programador-s%C3%AAnior-trabalha-com-desenvolvimento-da-programa%C3%A7%C3%A3o-de-tecnologias-e-codifica%C3%A7%C3%A3o-trabalhando-software-em-v%C3%A1rios-154840122.jpg"> alt="Senior Level">
                     <div class="card-info">
                         <h3>NÍVEL SÊNIOR</h3>
                         <p class="price">R$ 16.500,00+</p>
