--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HUB TECNOLOGIA | CARREIRA</title>
+    <title>HUB TECNOLOGIA | GUIA COMPLETO</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +14,7 @@
             <div class="logo">TECH<span>SYSTEM</span></div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="#sobre">SOBRE</a></li>
+                    <li><a href="#sobre">PROFISSÃO</a></li>
                     <li><a href="#salario">SALÁRIOS</a></li>
                     <li><a href="#enem">ENEM</a></li>
                 </ul>
@@ -25,12 +25,12 @@
     <section class="hero-banner">
         <div class="hero-overlay">
             <div class="container">
-                <span class="badge">O FUTURO É AGORA</span>
-                <h1>TRANSFORME O MUNDO <br> ATRAVÉS DO <span>CÓDIGO</span></h1>
-                <p>Descubra como ingressar na carreira mais promissora da década, do ENEM ao primeiro salário de 5 dígitos.</p>
+                <span class="badge">START NA CARREIRA TECH</span>
+                <h1>O MAPA PARA O <br> SEU SUCESSO EM <span>T.I.</span></h1>
+                <p>Das notas do ENEM aos primeiros R$ 5 mil mensais. Descubra como dominar o mercado de tecnologia.</p>
                 <div class="hero-btns">
-                    <a href="#sobre" class="btn-primary">Começar Jornada</a>
-                    <a href="#salario" class="btn-secondary">Ver Salários</a>
+                    <a href="#enem" class="btn-primary">Ver Notas ENEM</a>
+                    <a href="#salario" class="btn-secondary">Média Salarial</a>
                 </div>
             </div>
         </div>
@@ -42,29 +42,29 @@
             <div class="grid-layout">
                 <div class="text-block">
                     <span class="label">VISÃO GERAL</span>
-                    <h2>O QUE É SER UM PROFISSIONAL DE T.I.?</h2>
-                    <p>A Tecnologia da Informação abrange o desenvolvimento de softwares, gestão de redes, segurança cibernética e inteligência artificial. É uma carreira dinâmica que exige aprendizado constante e oferece flexibilidade geográfica.</p>
+                    <h2>A CARREIRA QUE NÃO PARA DE CRESCER</h2>
+                    <p>Trabalhar com TI é estar na linha de frente da inovação. Seja criando apps, protegendo dados ou treinando IAs, o profissional de tecnologia é o mais requisitado do mundo atual.</p>
+                    <div class="tech-tags">
+                        <span>#HTML</span> <span>#CSS</span> <span>#JavaScript</span> <span>#Python</span>
+                    </div>
                 </div>
                 <div class="image-block">
-                    <img src="https://wordpress-cms-gc-prod-assets.quero.space/uploads/2020/09/Desenvolvedor-2.jpg" alt="Desenvolvedor">
+                    <img src="https://wordpress-cms-gc-prod-assets.quero.space/uploads/2020/09/Desenvolvedor-2.jpg" alt="Profissão">
                 </div>
             </div>
         </section>
 
         <section id="salario" class="content-section">
             <div class="section-header">
-                <span class="label">DADOS FINANCEIROS</span>
-                <h2>MÉDIA SALARIAL NO BRASIL</h2>
+                <span class="label">QUANTO VOCÊ VAI GANHAR?</span>
+                <h2>PROGRESSÃO SALARIAL</h2>
             </div>
             
             <div class="salary-grid">
                 <div class="card">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRElK_BFoE5iJOvD9VsZhNuNYr49WA0D5Jaog&s" alt="Junior"> 
                     <div class="card-info">
+                        <span class="level-tag">INICIANTE</span>
                         <h3>NÍVEL JÚNIOR</h3>
                         <p class="price">R$ 4.500,00</p>
-                        <p class="desc">Foco em execução e aprendizado técnico assistido.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="
+                        <p
